<package format="2">
	<name>nimbro_topic_transport</name>
	<version>1.0.0</version>
	<description>Contains nodes for TCP/UDP communication between ROS masters</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>

	<depend>roscpp</depend>
	<depend>topic_tools</depend>
	<depend>rqt_gui_cpp</depend>
	<depend>yaml-cpp</depend>

	<export>
		<rqt_gui plugin="${prefix}/rqt_plugin.xml" />
		<rqt_gui plugin="${prefix}/bandwidth_plugin.xml" />
	</export>

</package>
